GNOME Bugzilla – Bug 763602
validate: Fix overflow seek position comparision
Last modified: 2016-03-14 12:33:37 UTC
See commit message
Created attachment 323848 [details] [review] validate: Fix overflow seek position comparision MAX(0, ((gint64) priv->segment_start - priv->seek_pos_tol) will be a high positive number thanks to being interpreted as unsigned values if segment_start < seek_pos_tol. Fix this by explicitly checking for this case and only doing the subtraction otherwise. This fixes the problem from fdccffbb2e5885b3f8e7369cdbda45b6717ffab0 completely now.
Attachment 323848 [details] pushed as 3f0a13d - validate: Fix overflow seek position comparision
Also https://cgit.freedesktop.org/gstreamer/gst-devtools/commit/?id=4cee9de32154ae2317cffa207d706e4e384ccefa