validate: Fix overflow seek position comparision

MAX(0, ((gint64) priv->segment_start - priv->seek_pos_tol) will be a high
positive number thanks to being interpreted as unsigned values if
segment_start < seek_pos_tol. Fix this by explicitly checking for this case
and only doing the subtraction otherwise.

This fixes the problem from fdccffbb2e5885b3f8e7369cdbda45b6717ffab0
completely now.

https://bugzilla.gnome.org/show_bug.cgi?id=763602